new Integer(int) -> Integer.valueOf(int)